--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 	<groupId>com.anshul</groupId>
 	<artifactId>arsearch</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
-	<description>Demo project for Spring Boot</description>
+	<name>arsearch</name>
+	<description>Annual Report Search</description>
 
 	<properties>
 		<java.version>1.8</java.version>		
@@ -52,6 +52,17 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jcl</artifactId>
 			<version>5.1.9.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.telegram</groupId>
+			<artifactId>telegrambots</artifactId>
+			<version>4.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.telegram</groupId>
+			<artifactId>telegrambots-abilities</artifactId>
+			<version>4.1</version>
 		</dependency>
 	</dependencies>
 
