--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,7 @@ server.port=8080
 spring.devtools.restart.additional-paths = /resources
 
 logging.level.root=WARN
-logging.level.com.anshul.arsearch=DEBUG
+logging.level.org.springframework=INFO
+logging.level.com.anshul.arsearch=INFO
+
+logging.file=/Users/anshul/logs/arweb.log
