added profiles prod, dev

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,11 +1,8 @@
-#mvn spring-boot: run -Dspring-boot.run.profiles=foo
-server.port=8080
-
 spring.devtools.restart.additional-paths = /resources
 
-logging.level.root=WARN
-logging.level.org.springframework=INFO
 logging.level.com.anshul.arsearch=INFO
+
+logging.file=/root/anshul/logs/arweb.log
 
 elasticsearch.host=localhost
 elasticsearch.port=9200
