multiple filter working.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.devtools.restart.additional-paths = /resources
 
-logging.level.com.anshul.arsearch=DEBUG
+logging.level.com.anshul.arsearch=INFO
 
 logging.file=/Users/anshul/logs/arweb.log
 
